@@ -63,17 +63,28 @@ namespace GameOfLife
 
         public void Print()
         {
+            Console.ForegroundColor = ConsoleColor.White;
             for (int x = 0; x < width; x++)
             {
                 for (int y = 0; y < height; y++)
                 {
+                    Console.ForegroundColor = ConsoleColor.White;
                     if (grid[x][y].alive)
+                    {
+                        if (grid[x][y].HasChanged())
+                            Console.ForegroundColor = ConsoleColor.Green;
                         Console.Write(1);
+                    }
                     else
+                    {
+                        if (grid[x][y].HasChanged())
+                            Console.ForegroundColor = ConsoleColor.Red;
                         Console.Write(0);
+                    }
                 }
                 Console.Write(System.Environment.NewLine);
             }
+            Console.ForegroundColor = ConsoleColor.White;
         }
     }
 }
